k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pal-tracker
spec:
  rules:
    - http:
        paths:
        - path: "/pal-tracker"
          pathType: Prefix
          backend:
              service:
                name: pal-tracker
                port:
                  number: 8080
  ingressClassName: nginx
